--- a/css/main.css
+++ b/css/main.css
@@ -1,397 +1,417 @@
 /* ==========================================================================
    HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
    ========================================================================== */
-
 html,
 button,
 input,
 select,
 textarea {
-    color: #222;
-}
+  color: #222; }
 
 body {
-    font-size: 1em;
-    line-height: 1.4;
-}
+  font-size: 1em;
+  line-height: 1.4; }
 
 ::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+  background: #b3d4fc;
+  text-shadow: none; }
 
 ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+  background: #b3d4fc;
+  text-shadow: none; }
 
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0; }
 
 img {
-    vertical-align: middle;
-}
+  vertical-align: middle; }
 
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
+  border: 0;
+  margin: 0;
+  padding: 0; }
 
 textarea {
-    resize: vertical;
-}
+  resize: vertical; }
 
 .chromeframe {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0; }
 
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
    ========================================================================== */
-
 body {
-    font: 16px/26px Helvetica, Helvetica Neue, Arial;
-}
+  font: 16px/26px Arial; }
 
 .wrapper {
-    width: 90%;
-    margin: 0 5%;
-}
+  margin: 0 auto; }
 
-/* ===================
-    ALL: Orange Theme
-   =================== */
+/* ===== Gedankenwerk IMW Reponsive =========================================
+   Author: Marcel Fahle
+   ========================================================================== */
+.span2 {
+  width: 100%;
+  float: left; }
+  .span2 p {
+    margin-bottom: 2.5em; }
 
-.header-container {
-    border-bottom: 20px solid #e44d26;
-}
+.span2:first-of-type {
+  padding-right: 3%; }
 
-.footer-container,
-.main aside {
-    border-top: 20px solid #e44d26;
-}
+.span3 img {
+  width: 100%; }
+.span3 h2 {
+  color: #4B4B4B;
+  /*font-size: 1.625em;*/
+  font-size: 160%;
+  font-weight: normal; }
+.span3 ul {
+  padding-left: 1em;
+  list-style-image: url("../img/dot.png"); }
+  .span3 ul li {
+    color: #797979; }
 
-.header-container,
-.footer-container,
-.main aside {
-    background: #f16529;
-}
+.vector {
+  /*width: 17.25em;*/
+  width: 100%; }
 
-.title {
-    color: white;
-}
+.bordered {
+  border-color: #a4a4a4;
+  border-width: 2px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border-style: solid; }
 
-/* ==============
-    MOBILE: Menu
-   ============== */
+.span3:last-of-type {
+  margin-right: 0; }
 
-nav ul {
+.logo {
+  position: relative;
+  z-index: 10;
+  font-size: 1em;
+  line-height: 0;
+  margin: 0;
+  height: 4.8125em;
+  background-position: left top;
+  -webkit-background-size: 57.5em 4.8125em;
+  -o-background-size: 57.5em 4.8125em;
+  -moz-background-size: 57.5em 4.8125em;
+  background-size: 57.5em 4.8125em;
+  -webkit-margin-before: 0px;
+  -webkit-margin-after: 0px;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  background: white url("../img/logo.svg") no-repeat; }
+
+.logoclaim {
+  font-size: 1em;
+  line-height: 0;
+  margin: 0;
+  padding: 0;
+  width: 7.35106em;
+  height: 0.96475em;
+  position: absolute;
+  z-index: 100;
+  right: 1.5625em;
+  top: 0.9375em;
+  background-position: left top;
+  -webkit-background-size: 7.35106em 0.96475em;
+  -o-background-size: 7.35106em 0.96475em;
+  -moz-background-size: 7.35106em 0.96475em;
+  background-size: 7.35106em 0.96475em;
+  -webkit-margin-before: 0px;
+  -webkit-margin-after: 0px;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  background: white url("../img/logo-claim.svg") no-repeat; }
+
+header {
+  position: relative;
+  margin-top: 3.1em; }
+  header h1 {
     margin: 0;
-    padding: 0;
+    font-size: 1.65em;
+    color: #e20074;
+    font-weight: normal; }
+  header p {
+    margin-top: 2em;
+    font-size: 1.125em;
+    color: #4B4B4B; }
+  header .intro {
+    color: #2c2c2c; }
+
+section p {
+  color: #797979; }
+
+hr {
+  margin-top: 3.123em;
+  margin-bottom: 0; }
+
+.main-nav {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: block; }
+
+@media all and (min-width: 20em) {
+  .wrapper {
+    width: 18.75em; } }
+/*
+@media all and (min-width: 30em) {
+  .wrapper {
+    width: 28em;
+  }
 }
+*/
+@media all and (min-width: 30em) {
+  .span2 {
+    width: 46.95652173913044%; }
 
-nav a {
-    display: block;
-    margin-bottom: 10px;
-    padding: 15px 0;
+  .span3 {
+    float: left;
+    width: 31%;
+    margin-right: 3.4%; }
+    .span3 h2 {
+      font-weight: bold;
+      font-size: 120%;
+      white-space: nowrap; }
 
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
+  .span3:last-child {
+    margin-right: 0; }
 
-    color: white;
-    background: #e44d26;
-}
+  .wrapper {
+    width: 90%; }
 
-nav a:hover,
-nav a:visited {
-    color: white;
-}
+  .main-nav li {
+    display: block; } }
+@media all and (min-width: 57.5em) {
+  .span2 {
+    width: 46.95652173913044%;
+    /*width: 27.5em;*/ }
 
-nav a:hover {
-    text-decoration: underline;
-}
+  .span3 {
+    float: left;
+    width: 17.5em;
+    margin-right: 2.5em; }
+    .span3 h2 {
+      font-weight: normal;
+      font-size: 160%; }
 
-/* ==============
-    MOBILE: Main
-   ============== */
+  .wrapper {
+    width: 57.5em; }
 
-.main {
-    padding: 30px 0;
-}
+  .main-nav {
+    border: 1px solid red;
+    display: table; }
 
-.main article h1 {
-    font-size: 2em;
-}
+  .main-nav li {
+    display: table-cell; }
 
-.main aside {
-    color: white;
-    padding: 0px 5% 10px;
-}
-
-.footer-container footer {
-    color: white;
-    padding: 20px 0;
-}
-
+  .filler {
+    width: 28%; } }
 /* ===============
-    ALL: IE Fixes
-   =============== */
+  Nav elements
+  -=============== */
+.main-nav {
+  /* Firefox v3.6+ */
+  background-image: -moz-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
+  /* safari v4.0+ and by Chrome v3.0+ */
+  background-image: -webkit-gradient(linear, color-stop(0, white), color-stop(0.1, white), color-stop(0.93, #e7e7e7), color-stop(0.98, #d7d7d7), color-stop(1, #d7d7d7));
+  /* Chrome v10.0+ and by safari nightly build*/
+  background-image: -webkit-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
+  /* Opera v11.10+ */
+  background-image: -o-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
+  /* IE v10+ */
+  background-image: -ms-linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
+  background-image: linear-gradient(white 0%, white 10%, #e7e7e7 93%, #d7d7d7 98%, #d7d7d7 100%);
+  border-color: #d0d0d0;
+  border-width: 1px;
+  border-style: solid;
+  /* Firefox v3.5+ */
+  -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35);
+  /* Safari v3.0+ and by Chrome v0.2+ */
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35);
+  /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7)
+    progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true)";
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#ffd7d7d7) progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#59000000,Positive=true); }
 
-.ie7 .title {
-    padding-top: 20px;
-}
+.main-nav {
+  -moz-border-radius-topleft: 0.375em;
+  -moz-border-radius-bottomleft: 0.375em;
+  -webkit-border-top-left-radius: 0.375em;
+  -webkit-border-bottom-left-radius: 0.375em;
+  -moz-border-radius-topright: 0.375em;
+  -moz-border-radius-bottomright: 0.375em;
+  -webkit-border-top-right-radius: 0.375em;
+  -webkit-border-bottom-right-radius: 0.375em; }
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+.main-nav li:first-child a {
+  -moz-border-radius-topleft: 0.375em;
+  -moz-border-radius-bottomleft: 0.375em;
+  -webkit-border-top-left-radius: 0.375em;
+  -webkit-border-bottom-left-radius: 0.375em; }
 
+.main-nav li {
+  font-size: 0.875em;
+  color: #4b4b4b; }
 
+.main-nav li a {
+  display: block;
+  height: 2.4em;
+  line-height: 2.5em;
+  color: #4B4B4B;
+  padding: 0 19px 0 19px;
+  text-decoration: none; }
 
+.main-nav li a:hover {
+  /* Firefox v3.6+ */
+  background-image: -moz-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
+  /* safari v4.0+ and by Chrome v3.0+ */
+  background-image: -webkit-gradient(linear, color-stop(0, #ececec), color-stop(0.1, #ececec), color-stop(0.93, #d5d5d5), color-stop(0.98, #c6c6c6), color-stop(1, #c6c6c6));
+  /* Chrome v10.0+ and by safari nightly build*/
+  background-image: -webkit-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
+  /* Opera v11.10+ */
+  background-image: -o-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
+  /* IE v10+ */
+  background-image: -ms-linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%);
+  background-image: linear-gradient(#ececec 0%, #ececec 10%, #d5d5d5 93%, #c6c6c6 98%, #c6c6c6 100%); }
 
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 480px) {
-
-/* ====================
-    INTERMEDIATE: Menu
-   ==================== */
-
-    nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
-    }
-
-    nav li:first-child a {
-        margin-left: 0;
-    }
-
-    nav li:last-child a {
-        margin-right: 0;
-    }
-
-/* ========================
-    INTERMEDIATE: IE Fixes
-   ======================== */
-
-    nav ul li {
-        display: inline;
-    }
-
-    .oldie nav a {
-        margin: 0 0.7%;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-
-/* ====================
-    WIDE: CSS3 Effects
-   ==================== */
-
-    .header-container,
-    .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
-    }
-
-/* ============
-    WIDE: Menu
-   ============ */
-
-    .title {
-        float: left;
-    }
-
-    nav {
-        float: right;
-        width: 38%;
-    }
-
-/* ============
-    WIDE: Main
-   ============ */
-
-    .main article {
-        float: left;
-        width: 57%;
-    }
-
-    .main aside {
-        float: right;
-        width: 28%;
-    }
-}
-
-@media only screen and (min-width: 1140px) {
-
-/* ===============
-    Maximal Width
-   =============== */
-
-    .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
-        margin: 0 auto;
-    }
-}
+.main-nav li a:active {
+  /* Firefox v3.6+ */
+  background-image: -moz-linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
+  /* safari v4.0+ and by Chrome v3.0+ */
+  background-image: -webkit-gradient(linear, color-stop(0, #d2d2d2), color-stop(0.1, #d2d2d2), color-stop(0.93, silver), color-stop(0.98, #bbbbbb), color-stop(1, #bbbbbb));
+  /* Chrome v10.0+ and by safari nightly build*/
+  background-image: -webkit-linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
+  /* Opera v11.10+ */
+  background-image: -o-linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
+  /* IE v10+ */
+  background-image: -ms-linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
+  background-image: linear-gradient(#d2d2d2 0%, #d2d2d2 10%, silver 93%, #bbbbbb 98%, #bbbbbb 100%);
+  /* Firefox v3.5+ */
+  -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15);
+  /* Safari v3.0+ and by Chrome v0.2+ */
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15);
+  /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35), inset 0px 0px 4px rgba(0, 0, 0, 0.05), inset 0px 3px 4px rgba(0, 0, 0, 0.15); }
 
 /* ==========================================================================
    Helper classes
    ========================================================================== */
-
 .ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    *text-indent: -9999px;
-}
+  background-color: transparent;
+  border: 0;
+  overflow: hidden;
+  *text-indent: -9999px; }
 
 .ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
+  content: "";
+  display: block;
+  width: 0;
+  height: 150%; }
 
 .hidden {
-    display: none !important;
-    visibility: hidden;
-}
+  display: none !important;
+  visibility: hidden; }
 
 .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto; }
 
 .invisible {
-    visibility: hidden;
-}
+  visibility: hidden; }
 
 .clearfix:before,
 .clearfix:after {
-    content: " ";
-    display: table;
-}
+  content: " ";
+  display: table; }
 
 .clearfix:after {
-    clear: both;
-}
+  clear: both; }
 
 .clearfix {
-    *zoom: 1;
-}
+  *zoom: 1; }
 
 /* ==========================================================================
    Print styles
    ========================================================================== */
-
 @media print {
-    * {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
+  * {
+    background: transparent !important;
+    color: black !important;
+    /* Black prints faster: h5bp.com/s */
+    box-shadow: none !important;
+    text-shadow: none !important; }
 
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
+  a,
+  a:visited {
+    text-decoration: underline; }
 
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
+  a[href]:after {
+    content: " (" attr(href) ")"; }
 
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
+  abbr[title]:after {
+    content: " (" attr(title) ")"; }
 
-    /*
-     * Don't show links for images, or javascript/internal links
-     */
+  /*
+   * Don't show links for images, or javascript/internal links
+   */
+  .ir a:after,
+  a[href^="javascript:"]:after,
+  a[href^="#"]:after {
+    content: ""; }
 
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
+  pre,
+  blockquote {
+    border: 1px solid #999999;
+    page-break-inside: avoid; }
 
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
+  thead {
+    display: table-header-group;
+    /* h5bp.com/t */ }
 
-    thead {
-        display: table-header-group; /* h5bp.com/t */
-    }
+  tr,
+  img {
+    page-break-inside: avoid; }
 
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
+  img {
+    max-width: 100% !important; }
 
-    img {
-        max-width: 100% !important;
-    }
+  @page {
+    margin: 0.5cm; }
 
-    @page {
-        margin: 0.5cm;
-    }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3; }
 
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+  h2,
+  h3 {
+    page-break-after: avoid; } }
