--- a/index.haml
+++ b/index.haml
@@ -35,13 +35,13 @@
         %nav
           %ul.main-nav
             %li
-              %a{href: "#"} Deutsche Telekom for MVNOs
+              %a#link1{href: "#"} Deutsche Telekom for MVNOs
             %li
-              %a{href: "#"} Selected Segments
+              %a#link2{href: "#"} Selected Segments
             %li
-              %a{href: "#"} Business Models
+              %a#link3{href: "#"} Business Models
             %li
-              %a{href: "#"} Contact Us
+              %a#link4{href: "#"} Contact Us
             %li.filler
 
     .main-container
@@ -51,147 +51,295 @@
           %header
             %h1 Deutsche Telekom for MVNOs
             %p.intro 
-              Deutsche Telekom is one of the world's leading integrated telecommunications companies. 
-              We operate mobile networks in 15 European countries as well as the US and offer the only 
-              cross-Atlantic mobile telecommunications footprint in the world.
+              Deutsche Telekom is one of the world's leading integrated telecommunications 
+              companies. We operate mobile networks in 15 European countries as well as the 
+              US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
 
           %section.span2
             %p 
-              Our goal is to innovate our industry and provide our customers with the best possible service. 
-              We believe that partnerships are essential to achieving this objective and enabling Mobile Virtual 
-              Network Operators (MVNOs) is one the most important partnership forms in our strategy 
-              to achieve this objective.
+              Our goal is to innovate our industry and provide our customers with the best 
+              possible service. Essential to achieving this objective are strong partnerships, 
+              of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs).
 
           %section.span2
             %p 
-              We are  one of the pioneers in the Virtual Operator field and we host a number of the most 
-              successful MVNOs of the world on our networks. Our extensive experience and knowledge means 
-              that we can provide our partners with the best possible support to drive successful entry 
-              in the communications space.
+              We are a pioneer in the Virtual Operator field and host a number of the world's 
+              most successful MVNOs on our networks. With our extensive knowledge, we give 
+              our partners the support they need to successfully enter the telecommunications space.
+
 
         %article.clearfix
 
-          %section.span3
+          %section.span3.imgspan3
             %noscript{data: {mobilesrc: "img/content-business-140.jpg", 
             fullsrc: "img/content-business.jpg"}, class: "responsivize"}
               %img{src: "img/content-business-140.jpg"}
-          %section.span3
-            %noscript{data: {mobilesrc: "img/content-youth-140.jpg", 
-            fullsrc: "img/content-youth.jpg"}, class: "responsivize"}
-              %img{src: "img/content-youth-140.jpg"}
-          %section.span3
+          %section.span3.imgspan3
             %noscript{data: {mobilesrc: "img/content-ethnic-140.jpg", 
             fullsrc: "img/content-ethnic.jpg"}, class: "responsivize"}
               %img{src: "img/content-ethnic-140.jpg"}
+          %section.span3.imgspan3
+            %noscript{data: {mobilesrc: "img/content-youth-140.jpg", 
+            fullsrc: "img/content-youth.jpg"}, class: "responsivize"}
+              %img{src: "img/content-youth-140.jpg"}
 
         %hr
 
-        %article.clearfix.segments
+        %article.clearfix.segments.selected-segments
           %header
             %h1 Selected Segments
             %p
-              Offering mobile services allows our partners to monetize existing assets 
-              and make existing products and services more compelling. If you are active 
-              in one of the following industries, there is  significant potential in partnering 
-              with us to offer mobile telecommunications services. There is also potential 
-              beyond these industries, and no limit to the innovation potential of MVNO services!
+              By offering mobile services, our partner's products and services become more 
+              compelling and existing assets can be monetized. If you are active in one of 
+              the following industries, there is significant potential in partnering with us to 
+              offer mobile telecommunications services. Beyond these fields there are limitless 
+              innovation possibilities with MVNO services!
 
           %section.span3
             %h2 Retailers
-            .vector.bordered 
-              %img{src: "img/pic_retailers.svg"}
-            %ul
-              %li Increase footfall in own points of sales
-              %li Improve loyalty of customer base with cross segment/category campaigns
-              %li Exploit revenues from mobile services and devices
+            .spanwrapper
+              .vector.bordered 
+                %img{src: "img/pic_retailers.svg"}
+              %ul
+                %li Increase points of sales footfall
+                %li Improve loyalty of customer base with cross segment/category campaigns
+                %li Exploit revenues from mobile services and devices
+            %hr
 
 
           %section.span3
             %h2 Ethnic Brands
-            .vector.bordered
-              %img{src: "img/pic_ethnic_brands.svg"}
-            %ul
-              %li Monetize international calling routes and customer base
-              %li Provide best value mobile service for international calls
-              %li Target ethnic groups with individual mobile services
+            .spanwrapper
+              .vector.bordered
+                %img{src: "img/pic_ethnic_brands.svg"}
+              %ul
+                %li Monetize international calling routes and customer base
+                %li Provide best value mobile service for international calls
+                %li Target ethnic groups with individual mobile services
+            %hr
 
 
           %section.span3
             %h2 Youth Brands
-            .vector.bordered
-              %img{src: "img/pic_youth_brands.svg"}
-            %ul
-              %li Monetize brand awareness and media reach in teenagers and young adults segment
-              %li Grow customers' brand interaction time and content consumption
-              %li Stimulate brand loyalty
+            .spanwrapper
+              .vector.bordered
+                %img{src: "img/pic_youth_brands.svg"}
+              %ul
+                %li Monetize brand awareness and media reach with teenager and young adult segments
+                %li Grow customers' brand interaction time and content consumption
+                %li Stimulate brand loyalty
+            %hr
 
         %article.clearfix.segments
 
           %section.span3
             %h2 Social Networks
-            .vector.bordered
-              %img{src: "img/pic_social_networks.svg"}
-            %ul
-              %li Provide specific price propositions for the mobile social network usage
-              %li Monetize user base by adding social commerce and service extras
-              %li Encourage user stickiness by integrating mobile services into core of brand proposition
+            .spanwrapper
+              .vector.bordered
+                %img{src: "img/pic_social_networks.svg"}
+              %ul
+                %li Provide specific propositions for mobile social network use
+                %li Monetize user base by adding social commerce and service extras
+                %li Encourage user loyalty by integrating mobile services into core brand proposition
+            %hr
 
           %section.span3
             %h2 Fixed Operators
-            .vector.bordered
-              %img{src: "img/pic_fixed_operators.svg"}
-            %ul
-              %li Provide full telecommunications portfolio to subscriber base
-              %li Reduce churn by offering multi-play bundles
-              %li Leverage existing network assets to provide integrated services
+            .spanwrapper
+              .vector.bordered
+                %img{src: "img/pic_fixed_operators.svg"}
+              %ul
+                %li Provide full telecommunications portfolio to subscriber base
+                %li Reduce churn by offering multi-play bundles
+                %li Leverage existing network assets to provide integrated services
+            %hr
 
           %section.span3
             %h2 Data
-            .vector.bordered
-              %img{src: "img/pic_data.svg"}
-            %ul
-              %li Improve product appeal by bundling devices and connectivity
-              %li Offer advanced services (e.g. M2M, maintenance service)
-              %li Add continuous service revenues to one-time device sales revenues
+            .spanwrapper
+              .vector.bordered
+                %img{src: "img/pic_data.svg"}
+              %ul
+                %li Improve product appeal by bundling devices and connectivity
+                %li Offer advanced services (e.g. M2M, maintenance service)
+                %li Add continuous service revenues to one-time device sales revenues
+            %hr
 
         %hr
 
-        %article.clearfix
+        %article.clearfix.business-models
           %header
             %h1 MVNO Business Models
 
           %section
             %p
-              We are experienced in large a variety of business models, complementing our 
-              partners' assets, competencies and investments. Jointly with our partners, 
-              we select the best fitting commercial and technical set-up for each co-operation.
+              We have experience with a large variety of business models that complement 
+              our partners' assets, competencies and investments. Together with our partners, 
+              we select the most appropriate commercial and technical set-up for each project.
 
             %p
               Our solution portfolio ranges from brand licensing/branded reselling to national 
-              roaming - and includes any model in between. In the first case we operationally 
+              roaming - and includes any model in-between. In the first case, we operationally 
               manage the whole mobile service delivery and rely on our partners' branding and 
-              marketing assets, in the latter case our partner runs an own mobile (core) network.
+              marketing assets. In the latter case, our partners run their own mobile (core) network.
 
-          %section.span3.boxed.dark
-            %h3 
-              Branded Resale/
-              Brand Licensing
-            %p 
-              For partners for whom telco is 
-              suitable brand extension, but 
-              not a core business.
-            %h4 Our main contribution
-            %ul
-              %li Mobile network services
-              %li Numbering, roaming
-              %li Operations and business support
-              %li Product management
+          .fixed-height-wrapper.clearfix
 
-    .footer-container
-      %footer{class: "wrapper"}
-        %h3 Footer goes here
+            %section.span3.fixed
+              .boxed.dark
+                %h3 
+                  Branded Resale/
+                  %br Brand Licensing
+                %p 
+                  For partners where telco is a suitable brand extension,
+                  but not a core business.
+
+                .spanwrapper
+                  %h4 Our main contribution
+                  %ul
+                    %li Mobile network services
+                    %li Numbering, roaming
+                    %li Operations and business support
+                    %li Product management
+
+              .boxed.fillerbox
+                %h4 Partner's main contribution
+                %ul
+                  %li Marketing, sales and distribution
+                  %li Brand and communication
+
+
+            %section.span3.fixed
+              .boxed.medium
+                %h3
+                  Light MVNO/
+                  %br Service Provider
+                %p 
+                  For partners with telco experience who need autonomy in marketing 
+                  and pricing.
+
+                .spanwrapper
+                  %h4 Our main contribution
+                  %ul
+                    %li Mobile network services
+                    %li Numbering, roaming
+                    %li Operations and business support
+                
+              .boxed.fillerbox
+                %h4 Partner's main contribution
+                %ul
+                  %li Operations and business support
+                  %li Marketing, sales and distribution
+                  %li Brand and communication
+
+            %section.span3.fixed
+              .boxed.light
+                %h3 
+                  Full MVNO/ 
+                  %br National Roaming
+
+                %p For partners with significant telco experience and assets.
+
+                .spanwrapper
+                  %h4 Our main contribution
+                  %ul 
+                    %li Mobile (radio) network services
+                    %li Enabling services
+
+              .boxed.fillerbox
+                %h4 Partner's main contribution
+                %ul
+                  %li Core network services
+                  %li Numbering, roaming
+                  %li Operations and business support
+                  %li Marketing, sales and distribution
+                  %li Brand and communication
+
+
+    .footer-container.clearfix
+      %footer{class: "wrapper clearfix"}
+        %h3 Contact Us
+
+        .contact
+          %img{src: "img/Foto_Peter_Hoffmann_SD.jpg", class: "profile"}
+          %p.top 
+            %strong Peter Hoffmann
+            %br Vice President
+            %br
+            International Mobile Wholesale
+            %br Deutsche Telekom AG
+            53262 Bonn
+            %br
+            %br
+            Phone: +49 228 181-18765
+            %br 
+              E-Mail: 
+              %a{href: "mailto:mvno@telekom.de"} mvno@telekom.de
+              %br
+          %p
+            We offer the only transatlantic mobile communications footprint, 
+            covering 15 European countries and the US.
+          %p
+            If you are interested in becoming an MVNO hosted by one of our 
+            mobile operations, please contact us!
+          %p
+            We are happy to discuss your business idea with you, and look into 
+            how we can support you to make it a success.
+
+
+
+        .countryinfo.clearfix
+          %p Are you looking for more specific information for a specific country?
+
+          %select{onchange: "if (this.value) window.location.href=this.value"}
+            %option{value: ""} Choose a destination ...
+            %option{value: "http://www.amc.al/"} Albania: AMC 
+            %option{value: "http://www.t-mobile.at/"} Austria: T-Mobile Austria 
+            %option{value: "http://www.globul.bg/eng/"} Bulgaria: Globul
+            %option{value: "http://www.t.ht.hr/eng"} Croatia: T-Hrvatski Telekom 
+            %option{value: "http://www.t-mobile.cz/"} Czech Republic: T-Mobile Czech Republic 
+            %option{value: "http://www.telekom.de/"} Germany: Telekom Deutschland
+            %option{value: "http://www.cosmote.gr/"} Greece: Cosmote 
+            %option{value: "http://www.t-mobile.hu/"} Hungary: Magyar Telekom 
+            %option{value: "http://www.t-mobile.com.mk/"} Macedonia: Makedonski Telekom
+            %option{value: "http://www.telekom.me/"} Montenegro: Crnogorski Telekom
+            %option{value: "http://www.t-mobile.nl/"} Netherlands: T-Mobile Netherlands 
+            %option{value: "http://www.t-mobile.pl/en/"} Poland: T-Mobile Poland 
+            %option{value: "http://www.slovaktelekom.sk/"} Slovakia: Slovak Telekom 
+            %option{value: "http://www.cosmote.ro/en/"} Romania: Cosmote Romania 
+            %option{value: "http://everythingeverywhere.com/"} United Kingdom: Everything Everywhere
+            %option{value: "http://www.t-mobile.com/"} USA: T-Mobile USA 
+
+
+
+          %noscript{data: {mobilesrc: "img/Map_HD.png", 
+          fullsrc: "img/Map_HD.png"}, hiressrc: "img/Map_HD.png", class: "responsivize"}
+            %img{src: "img/Map_HD.png"}
+
+      
+        .clearfix
+        .footerlinks
+          %p.copyright
+            &copy;Deutsche Telekom, 2013
+            %a{href: "#"} Privacy Policy
+            |
+            %a{href: "#"} Legal Disclaimer
+            |
+            %a{href: "#"} Imprint
+          %p.otherlinks
+            Other Links: 
+            %a{href: "http://telekom.de"} Deutsche Telekom
+            |
+            %a{href: "#"} ICSS
+            |
+            %a{href: "#"} MNC
+            |
+            %a{href: "#"} Machine-to-Machine (M2M)
+
+
 
     
     %script{src: "js/vendor/jquery-1.9.0.min.js"}
+    %script{src: "js/vendor/jquery.smooth-scroll.min.js"}
     %script{src: "js/main.js"}
 
